--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<html>
+<!doctype html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Información Plaza CU</title>
+</head>
+
  <body>
+    <div class="container">     
      <h1>Información plaza</h1>
      <p><b>Código:</b> F036-570-DFA0340</p>
      <p><b>Autor:</b> <a href="http://labra.weso.es">Jose Emilio Labra Gayo</a></p>
@@ -10,5 +19,7 @@
          <li><a href="pdf/pDocInves.pdf">Historial académico, docente e investigador, proyecto docente y proyecto de investigación</a></li>
          <li><a href="pdf/trabajoInves.pdf">Trabajo de Investigación</a></li>
      </ul>
+  </div>     
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>     
  </body>   
 </html>
