--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
      <ul>
          <li><a href="pdf/pDocInves.pdf">Historial académico, docente e investigador, proyecto docente y proyecto de investigación</a></li>
          <li><a href="pdf/trabajoInves.pdf">Trabajo de Investigación</a></li>
+         <li><a href="pdf/Prueba1_Presentacion.pdf">Presentación prueba 1</a></li>
+         <li><a href="pdf/Prueba2_Presentacion.pdf">Presentación prueba 2</a></li>
      </ul>
   </div>     
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>     
